<resources>
    <string name="app_name">MistZer Randomizer</string>
    <string name="names_text">Entrer les 10 noms</string>
    <string name="names_1">Invocateur</string>
    <string name="names_2">Invocateur 2</string>
    <string name="names_3">Invocateur 3</string>
    <string name="names_4">Invocateur 4</string>
    <string name="names_5">Invocateur 5</string>
    <string name="names_6">Invocateur 6</string>
    <string name="names_7">Invocateur 7</string>
    <string name="names_8">Invocateur 8</string>
    <string name="names_9">Invocateur 9</string>
    <string name="names_10">Invocateur 10</string>
    <string name="names_button">Continuer</string>
    <string name="home_title">Bienvenue sur […]</string>
    <string name="start_button">Commencer</string>
    <string name="about_button">À propos</string>
    <string name="options_button">Liste des champions</string>
    <string name="a_propos_title">A propos</string>
    <string name="a_propos_content">Cette application a pour but de s\'amuser en peu sur League of Legends. En cliquant sur le bouton commencer, vous pouvez entrez 10 joueurs, et l\'application vous choisit aléatoirement un rôle ainsi qu\'un personnage.
    </string>
    <string name="top">Top</string>
    <string name="jungle">Jungle</string>
    <string name="mid">Mid</string>
    <string name="adc">Adc</string>
    <string name="support">Support</string>
    <string name="restart">Recommencer</string>
    <string name="menu">Menu</string>

</resources>