<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="129dp" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:background="@drawable/rounded_button" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="118dp" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_button"
        android:background="@drawable/rounded_button"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="34dp" />

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:background="@drawable/rounded_button" />

</LinearLayout>